--- a/src/app/modals/custom-modal/custom-modal.component.html
+++ b/src/app/modals/custom-modal/custom-modal.component.html
@@ -3,16 +3,20 @@
     <button type="button" class="close" aria-label="Close button" aria-describedby="modal-title" (click)="decline()"></button>
 </div>
 <div class="modal-body">
-    <p><strong>{{ messageDescription }}</strong></p>
-    <span class="text-danger">This operation cannot be undone.</span>
+
+    <form #f="ngForm" (ngSubmit)="accept()">
+        <label for="">
+            E-mail:
+        </label>
+        <input class="form-control" type="email" [(ngModel)]="email" name="email">
+        <label for="">Password:</label>
+        <input class="form-control" type="password" [(ngModel)]="password" name="password">
+        <button type="submit" class="btn btn-primary">
+            Log in
+        </button>
+    </form>
 </div>
-<form #f="ngForm" (ngSubmit)="logIn()">
-    <input type="email" [(ngModel)]="email" name="email">
-    <input type="password" [(ngModel)]="password" name="password">
-    <button type="submit" class="btn btn-primary">
-        Log in
-    </button>
-</form>
+
 <div class="modal-footer">
     <button type="button" class="btn btn-outline-danger" (click)="decline()">Cancel</button>
 </div>
