--- a/src/app/modules/index/index.component.html
+++ b/src/app/modules/index/index.component.html
@@ -6,16 +6,20 @@
     </div>
   </div>
 
-
-<div class="container">
+<section class="content text-center">
+    <div class="container">
+  <h2>Conoce nuestras tiendas:</h2>
+  
     <div class="list-tiendas">
         <app-list-tiendas></app-list-tiendas>
     </div>
-
-    <div class="list-tiendas">
+    <h2>Top productos:</h2>
+    <div class="list-anuncios">
         <app-list-anuncios></app-list-anuncios>
     </div>
   
 </div>
+
+</section>
 
 
