--- a/src/app/modules/anuncios/list-anuncios/list-anuncios.component.html
+++ b/src/app/modules/anuncios/list-anuncios/list-anuncios.component.html
@@ -1,4 +1,5 @@
-<div *ngFor="let anuncio of anuncios" class="card" style="width: 18rem;">
+<div class="container-anuncios d-flex">
+  <div *ngFor="let anuncio of anuncios" class="card" style="width: 18rem;">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">{{anuncio.nombre}}</h5>
@@ -6,3 +7,4 @@
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
+</div>
