--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,14 @@
 .list-tiendas{
     margin: 10%;
 }
+
+.navbar-general{
+   padding: 15px 70px;
+   display: flex;
+   justify-content: space-between;
+}
+
+.navbar-general ul{
+    width: 70%;
+
+}
