--- a/src/app/modules/tiendas/list-tiendas/list-tiendas.component.html
+++ b/src/app/modules/tiendas/list-tiendas/list-tiendas.component.html
@@ -1,10 +1,12 @@
 <div class="container-tiendas d-flex">
   <div *ngFor="let tienda of tiendas" class="card" style="width: 18rem;">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" [src]="tienda.img" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">{{tienda.nombre}}</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <p class="card-text">
+        {{tienda.descripcion}}
+      </p>
+      <a [routerLink]="['/tienda', tienda.id_tienda]" class="btn btn-success">See more</a>
     </div>
   </div>
 </div>
