--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,17 @@
     width: 70%;
 
 }
+
+.header-tienda{
+    height: 300px;
+    background-size: cover;
+    color: white;
+    position: relative;
+    padding: 30px;
+}
+
+.content-header{
+    background: linear-gradient(rgba(255, 255, 255, 0),rgba(255, 255, 255, 0.5));
+    bottom: 0px;
+    position: absolute;
+}
